--- a/snowpack/package.json
+++ b/snowpack/package.json
@@ -21,7 +21,7 @@
     "access": "public"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "node ./builder/build.js",
     "build:watch": "tsc --watch",
     "lint": "tsc --noEmit --noUnusedLocals true --noUnusedParameters true && package-check"
   },
@@ -60,10 +60,11 @@
     "deepmerge": "^4.2.2",
     "detect-port": "^1.3.0",
     "es-module-lexer": "^0.3.24",
-    "esbuild": "^0.8.7",
+    "esbuild": "^0.12.5",
     "esinstall": "^0.5.1",
     "etag": "^1.8.1",
     "execa": "^4.0.3",
+    "fast-glob": "^3.2.5",
     "find-cache-dir": "^3.3.1",
     "find-up": "^5.0.0",
     "glob": "^7.1.4",
@@ -78,8 +79,6 @@
     "npm-run-path": "^4.0.1",
     "open": "^7.0.4",
     "p-queue": "^6.6.1",
-    "postcss": "^8.1.8",
-    "postcss-modules": "^3.2.2",
     "resolve-from": "^5.0.0",
     "rimraf": "^3.0.0",
     "signal-exit": "^3.0.3",
@@ -90,5 +89,9 @@
     "validate-npm-package-name": "^3.0.0",
     "ws": "^7.3.0",
     "yargs-parser": "^20.0.0"
+  },
+  "optionalDependencies": {
+    "postcss": "^8.1.8",
+    "postcss-modules": "^3.2.2"
   }
 }
