--- a/snowpack/package.json
+++ b/snowpack/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "snowpack",
-  "version": "2.18.5",
+  "name": "storyai-snowpack-v2",
+  "version": "0.1.0",
   "description": "The ESM-powered frontend build tool. Fast, lightweight, unbundled.",
-  "author": "Fred K. Schott <fkschott@gmail.com>",
+  "author": "Story.ai Team <team@story.ai>",
   "license": "MIT",
   "keywords": [
     "bundle",
@@ -15,13 +15,14 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/snowpackjs/snowpack.git"
+    "url": "https://github.com/storyai/snowpack-v2.git"
   },
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
-    "build": "node ./builder/build.js",
+    "build": "rimraf ./lib && tsc",
+    "build:fast": "rimraf ./lib && node ./builder/build.js",
     "build:watch": "tsc --watch",
     "lint": "tsc --noEmit --noUnusedLocals true --noUnusedParameters true && package-check"
   },
@@ -50,10 +51,9 @@
   "dependencies": {
     "@snowpack/plugin-build-script": "^2.0.12",
     "@snowpack/plugin-run-script": "^2.2.1",
-    "@types/cheerio": "0.22.22",
     "cacache": "^15.0.0",
     "cachedir": "^2.3.0",
-    "cheerio": "^1.0.0-rc.3",
+    "cheerio": "^1.0.0-rc.9",
     "chokidar": "^3.4.0",
     "compressible": "^2.0.18",
     "cosmiconfig": "^7.0.0",
@@ -82,7 +82,6 @@
     "resolve-from": "^5.0.0",
     "rimraf": "^3.0.0",
     "signal-exit": "^3.0.3",
-    "skypack": "^0.2.1",
     "source-map": "^0.7.3",
     "strip-ansi": "^6.0.0",
     "strip-comments": "^2.0.1",
@@ -92,6 +91,11 @@
   },
   "optionalDependencies": {
     "postcss": "^8.1.8",
-    "postcss-modules": "^3.2.2"
+    "postcss-modules": "^3.2.2",
+    "skypack": "^0.2.1"
+  },
+  "devDependencies": {
+    "@types/cheerio": "^0.22.29",
+    "typescript": "^4.3.2"
   }
 }
